limiting make model and year to real values
